2003-03-18  Gary Thomas  <gary@mlbassoc.com>

	* src/ser_16x5x.c (pc_serial_set_config): 
	Flag for CYG_IO_SET_CONFIG_SERIAL_HW_RX_FLOW_THROTTLE is 32 bits.
	
2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/ser_generic_16x5x.cdl: Remove irrelevant doc link.

2001-06-19  Jesper Skov  <jskov@redhat.com>

	* cdl/ser_generic_16x5x.cdl: Only define
	CYGDAT_IO_SERIAL_DEVICE_HEADER when necessary.

2001-06-18  Jonathan Larmour  <jlarmour@redhat.com>

	* src/ser_16x5x.c (pc_serial_set_config): Fix length check typo

2001-06-18  Jesper Skov  <jskov@masala.cambridge.redhat.com>

	* src/ser_16x5x.c (LCR_PE): Set correct bits (from Boris V. Guzhov)

2001-06-08  Jonathan Larmour  <jlarmour@redhat.com>

	* src/ser_16x5x.c: Support FIFOs better by detecting what we've got,
	and only acting if we have a _working_ FIFO.
	Assert on unhandled serial interrupt type.

2001-03-13  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/ser_generic_16x5x.cdl: Rename 
	CYGPKG_IO_SERIAL_GENERIC_16X5X_FIFO_OPTIONS to
	CYGPKG_IO_SERIAL_GENERIC_16X5X_FIFO and make it a boolean. Clarify
	descriptions a little.

	* src/ser_16x5x.c (serial_config_port): Only program FCR if FIFO
	support requested.
	Don't bother with intermediate _fifo_thresh.
	Detabify.

2001-03-13  Jesper Skov  <jskov@redhat.com>

	* cdl/ser_generic_16x5x.cdl: Removed the default value.

2001-03-09  Julian Smart  <julians@redhat.com>
	Removed default value for flavor none in
	CYGPKG_IO_SERIAL_GENERIC_16X5X_FIFO_OPTIONS since it
	causes an assert in libcdl

2001-03-05  Jesper Skov  <jskov@redhat.com>
	2001-02-15  Dave Airlie <airlied@parthus.com>

        * src/ser_16x5x.c (serial_config_port): Add support for setting
        a FIFO RX Threshold via CDL

        * cdl/ser_generic_16x5x.cdl: Add support for setting a FIFO
          RX threshold via CDL

2001-01-24  Dave Airlie  <airlied@parthus.com>

	* src/ser_16x5x.c (pc_serial_DSR): Allow RX timeouts to be interpreted
	as RXs.
